@@ -64,7 +64,7 @@ public class DataTracker
         return view.get().memtablesPendingFlush;
     }
 
-    public List<SSTableReader> getSSTables()
+    public Set<SSTableReader> getSSTables()
     {
         return view.get().sstables;
     }
@@ -300,7 +300,7 @@ public class DataTracker
     {
         view.set(new View(new Memtable(cfstore),
                           Collections.<Memtable>emptySet(),
-                          Collections.<SSTableReader>emptyList(),
+                          Collections.<SSTableReader>emptySet(),
                           Collections.<SSTableReader>emptySet(),
                           SSTableIntervalTree.empty()));
     }
@@ -456,15 +456,10 @@ public class DataTracker
         public final Memtable memtable;
         public final Set<Memtable> memtablesPendingFlush;
         public final Set<SSTableReader> compacting;
-        // We can't use a SortedSet here because "the ordering maintained by a sorted set (whether or not an
-        // explicit comparator is provided) must be <i>consistent with equals</i>."  In particular,
-        // ImmutableSortedSet will ignore any objects that compare equally with an existing Set member.
-        // Obviously, dropping sstables whose max column timestamp happens to be equal to another's
-        // is not acceptable for us.  So, we use a List instead.
-        public final List<SSTableReader> sstables;
+        public final Set<SSTableReader> sstables;
         public final SSTableIntervalTree intervalTree;
 
-        View(Memtable memtable, Set<Memtable> pendingFlush, List<SSTableReader> sstables, Set<SSTableReader> compacting, SSTableIntervalTree intervalTree)
+        View(Memtable memtable, Set<Memtable> pendingFlush, Set<SSTableReader> sstables, Set<SSTableReader> compacting, SSTableIntervalTree intervalTree)
         {
             this.memtable = memtable;
             this.memtablesPendingFlush = pendingFlush;
@@ -492,18 +487,18 @@ public class DataTracker
         public View replaceFlushed(Memtable flushedMemtable, SSTableReader newSSTable)
         {
             Set<Memtable> newPending = ImmutableSet.copyOf(Sets.difference(memtablesPendingFlush, Collections.singleton(flushedMemtable)));
-            List<SSTableReader> newSSTables = newSSTable == null
-                                            ? Collections.<SSTableReader>emptyList()
+            Set<SSTableReader> newSSTables = newSSTable == null
+                                            ? Collections.<SSTableReader>emptySet()
                                             : newSSTables(newSSTable);
             SSTableIntervalTree intervalTree = buildIntervalTree(newSSTables);
-            return new View(memtable, newPending, Collections.unmodifiableList(newSSTables), compacting, intervalTree);
+            return new View(memtable, newPending, newSSTables, compacting, intervalTree);
         }
 
         public View replace(Collection<SSTableReader> oldSSTables, Iterable<SSTableReader> replacements)
         {
-            List<SSTableReader> newSSTables = newSSTables(oldSSTables, replacements);
+            Set<SSTableReader> newSSTables = newSSTables(oldSSTables, replacements);
             SSTableIntervalTree intervalTree = buildIntervalTree(newSSTables);
-            return new View(memtable, memtablesPendingFlush, Collections.unmodifiableList(newSSTables), compacting, intervalTree);
+            return new View(memtable, memtablesPendingFlush, newSSTables, compacting, intervalTree);
         }
 
         public View markCompacting(Collection<SSTableReader> tomark)
@@ -518,19 +513,19 @@ public class DataTracker
             return new View(memtable, memtablesPendingFlush, sstables, compactingNew, intervalTree);
         }
 
-        private List<SSTableReader> newSSTables(SSTableReader newSSTable)
+        private Set<SSTableReader> newSSTables(SSTableReader newSSTable)
         {
             assert newSSTable != null;
             // not performance-sensitive, don't obsess over doing a selection merge here
             return newSSTables(Collections.<SSTableReader>emptyList(), Collections.singletonList(newSSTable));
         }
 
-        private List<SSTableReader> newSSTables(Collection<SSTableReader> oldSSTables, Iterable<SSTableReader> replacements)
+        private Set<SSTableReader> newSSTables(Collection<SSTableReader> oldSSTables, Iterable<SSTableReader> replacements)
         {
             ImmutableSet<SSTableReader> oldSet = ImmutableSet.copyOf(oldSSTables);
             int newSSTablesSize = sstables.size() - oldSSTables.size() + Iterables.size(replacements);
             assert newSSTablesSize >= Iterables.size(replacements) : String.format("Incoherent new size %d replacing %s by %s in %s", newSSTablesSize, oldSSTables, replacements, this);
-            List<SSTableReader> newSSTables = new ArrayList<SSTableReader>(newSSTablesSize);
+            Set<SSTableReader> newSSTables = new HashSet<SSTableReader>(newSSTablesSize);
             for (SSTableReader sstable : sstables)
             {
                 if (!oldSet.contains(sstable))
@@ -538,7 +533,7 @@ public class DataTracker
             }
             Iterables.addAll(newSSTables, replacements);
             assert newSSTables.size() == newSSTablesSize : String.format("Expecting new size of %d, got %d while replacing %s by %s in %s", newSSTablesSize, newSSTables.size(), oldSSTables, replacements, this);
-            return newSSTables;
+            return ImmutableSet.copyOf(newSSTables);
         }
 
         @Override
