@@ -30,6 +30,8 @@ import org.apache.cassandra.db.filter.QueryPath;
 import org.apache.cassandra.utils.ByteBufferUtil;
 import org.junit.Test;
 
+import org.apache.cassandra.io.sstable.SSTableReader;
+
 public class CollationControllerTest extends SchemaLoader
 {
     @Test
@@ -61,20 +63,22 @@ public class CollationControllerTest extends SchemaLoader
         
         store.forceBlockingFlush();
 
+        // add yet one more mutation
+        rm = new RowMutation("Keyspace1", dk.key);
+        rm.add(path, ByteBufferUtil.bytes("foobar"), 30);
+        rm.apply();
+        store.forceBlockingFlush();
+
         // A NamesQueryFilter goes down one code path (through collectTimeOrderedData())
+        // It should only iterate the last flushed sstable, since it probably contains the most recent value for Column1
         QueryFilter filter = QueryFilter.getNamesFilter(dk, path, ByteBufferUtil.bytes("Column1"));
         CollationController controller = new CollationController(store, false, filter, Integer.MIN_VALUE);
         controller.getTopLevelColumns();
         assertEquals(1, controller.getSstablesIterated());
-        
+
         // SliceQueryFilter goes down another path (through collectAllData())
-        // Add another mutation, with a lower timestamp then force another flush 
-        // so we can assert that we're not reading every sstable 
-        rm = new RowMutation("Keyspace1", dk.key);
-        rm.add(path, ByteBufferUtil.bytes("asdf"), 5);
-        rm.apply();
-        store.forceBlockingFlush();
-        
+        // We will read "only" the last sstable in that case, but because the 2nd sstable has a tombstone that is more
+        // recent than the maxTimestamp of the very first sstable we flushed, we should only read the 2 first sstables.
         filter = QueryFilter.getIdentityFilter(dk, path);
         controller = new CollationController(store, false, filter, Integer.MIN_VALUE);
         controller.getTopLevelColumns();
